infra/istio/policies/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-mtls-strict
  namespace: gridtokenx-prod
spec:
  mtls:
    mode: STRICT
