infra/istio/policies/global-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mesh-wide-deny-all
  namespace: istio-system
spec:
  # No selector means this applies to all workloads in the namespace
  # If applied in istio-system, it can be a global default
  action: DENY
  rules:
  - {} # Matches everything
